do not crash if restoring the folding state is impossible

BUG: 295072
FIXED-IN: 4.8.2